# MediaBlocker

./: Cargo.toml  Makefile  README.md
src/: application.rs  global_constants.rs  main.rs  media_player.rs  screen_blocking.rs  utils.rs
src/app/: application.rs  media_player.rs  mod.rs  screensaver.rs
src/app/monitor/: channel.rs  media_monitor.rs  mod.rs  playback_monitor.rs
src/ui/: system_tray.rs
