[package]
name = "MediaBlocker"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true
split-debuginfo = 'off'

[dependencies]
zbus = "5.12.0"
zvariant = "5.8.0"
anyhow = "1.0.100"
async-std = "1.13.2"
futures = "0.3.31"
directories = "6.0.0"
log = "0.4.29"
simplelog = "0.12.2"
tao = "0.34.5"
tray-icon = "0.21.2"
gtk = "0.18.2"
image = "0.25.9"